DevTools: outline-disclosure: fix expandable items alignment.
BUG=435954

Review URL: https://codereview.chromium.org/746143002

git-svn-id: svn://svn.chromium.org/blink/trunk@185857 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/elements/elementsTreeOutline.css
+++ b/front_end/elements/elementsTreeOutline.css
@@ -18,13 +18,12 @@
 }
 
 .outline-disclosure li.parent {
-    margin-left: -12px
+    margin-left: -13px;
 }
 
 .outline-disclosure li.parent::before {
     float: left;
     width: 10px;
-    padding-right: 2px;
     box-sizing: border-box;
 }
 
